CR-2002-05-29-0: Testsuite: - added prototype functions for HTML generation
                 Enhancem.: - new parameter for testsuite: html_dir
                            - compile_source() procedure will generate HTML
                              output in html_dir directory

JG-2002-05-29-1: Cleanup:   make dstring functions return a const char * 
                            instead of char *
                 Issue:     #265

JG-2002-05-29-0: Cleanup:   use of library functions, typos,
                            improved job_get_id_string()
                 Issue:     #258           

CR-2002-05-28-0: Testsuite: test new qrsh options -h and -hold_jid
                 Issue:     #66

JG-2002-05-28-0: Cleanup:   common function calls to create the active job 
                            directories in execd. 
                            Replace static buffers for building paths by 
                            dynamic strings (dstring).
                            Handle KEEP_ACTIVE with restarted jobs.
                 Issues:    #254, #261           

AH-2002-05-28-1: Bugfix:    Fix messages printed when GDI client fails contacting 
                            qmaster

JG-2002-05-27-0: Bugfix:    qsh ignored -S <shell> in sge_request(5) files
                 Issue:     #250
                 Bugtraq:   #4682966

AA-2002-05-27-0: I18N.:     I18N/L10N changes

CR-2002-05-24-1: Enhancem.: merged L10N Changes for install scripts from
                            V53_beta2_BRANCH

CR-2002-05-24-0: Bugfix:    - removed unused variable in infotext.c

JG-2002-05-24-0: Bugfix:    qalter -verify failed.

CR-2002-05-23-0: Enhancem.: - added infotext_msg_parse.tcl
                            - merge of infotext changes in V53_beta2_BRANCH

JG-2002-05-23-1: Bugfix:    qlogin jobs made execd crash.

JG-2002-05-23-0: Cleanup:   Made behaviour of sge_dstring_sprintf conformable 
                            to sprintf. 